# almeida-numerics

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: benchmark.py
src/almeida_numerics/: __init__.py  _kernels.py  linalg.py  stats.py  tensor.py
tests/: test_kernels_vs_numpy.py  test_linalg_vs_numpy.py  test_stats_vs_scipy.py  test_tensor_vs_numpy.py
